  (Stephen Dolan, review by David Allsopp)

- #9570: Provide an Atomic module with a trivial purely-sequential
  implementation, to help write code that is compatible with Multicore
  OCaml.
  (Gabriel Scherer, review by Xavier Leroy)

- #9571: Make at_exit and Printexc.register_printer thread-safe.
  (Guillaume Munch-Maccagnoni, review by Gabriel Scherer and Xavier Leroy)

### Other libraries:

* #9206, #9419: update documentation of the threads library;
  deprecate Thread.kill, Thread.wait_read, Thread.wait_write,
  and the whole ThreadUnix module.
  (Xavier Leroy, review by Florian Angeletti, Guillaume Munch-Maccagnoni,
   and Gabriel Scherer)

- #9573: reimplement Unix.create_process and related functions without
  Unix.fork, for better efficiency and compatibility with threads.
  (Xavier Leroy, review by Gabriel Scherer and Anil Madhavapeddy)

- #9575: Add Unix.is_inet6_addr
  (Nicolás Ojeda Bär, review by Xavier Leroy)

- #9593: Use new flag for non-elevated symbolic links and test for Developer
  Mode on Windows
  (Manuel Hornung, review by David Allsopp and Nicolás Ojeda Bär)

* #9601: Return EPERM for EUNKNOWN -1314 in win32unix (principally affects
  error handling when Unix.symlink is unavailable)
  (David Allsopp, review by Xavier Leroy)

### Tools:


### Manual and documentation:


### Compiler user-interface and warnings:

- #9560: Report partial application warnings on type errors in applications.
  (Stephen Dolan, report and testcase by whitequark, review by Gabriel Scherer
   and Thomas Refis)

- #9583: when bytecode linking fails due to an unavailable module, the module
  that requires it is now included in the error message.
  (Nicolás Ojeda Bär, review by Vincent Laviron)

- #9615: Attach package type attributes to core_type.
  When parsing constraints on a first class module, attributes found after the
  module type were parsed but ignored. Now they are attached to the
  corresponding core_type.
  (Etienne Millon, review by Thomas Refis)
